<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoodAlpha</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="mood_title">Hello Mood!</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Home</string>
    <string name="action_moods">Moods</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mood">MoodActivity</string>
    <string name="mood_collection">Mood Collection</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="demo_external_activity">Demo External Activity</string>
    <string name="title_activity_member">MemberActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_section1">Mood</string>
    <string name="title_section2">Member</string>
    <string name="title_section3">Setting</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_thing">ThingActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
