<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_websearch"
    android:icon="@drawable/action_search"
    android:title="@string/action_websearch"
    android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_moods"
        android:title="@string/action_moods"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_my"
        android:title="@string/title_activity_my"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_tap"
        android:title="@string/title_activity_tab"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
