<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:moodalpha="http://schemas.android.com/apk/res-auto"
    tools:context="com.comfyard.moodalpha.MoodActivity" >

    <item android:id="@+id/action_main"
        android:title="@string/action_main"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_moods"
        android:title="@string/action_moods"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_things"
        android:title="@string/action_things"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

</menu>
